Add new poetry pages for Nguyễn Bính, Nguyễn Trung Kiên, and TPD; update titles and subtitles in existing pages

--- a/pages/the-planet/home-vn.html
+++ b/pages/the-planet/home-vn.html
@@ -297,8 +297,8 @@
 
     <div class="container">
         <div class="header">
-            <h1>Hành Tinh</h1>
-            <p class="subtitle">Trí Tuệ Từ Châu Phi</p>
+            <h1>Hành Tinh Của Tôi</h1>
+            <p class="subtitle">Sức Khoẻ và Trí Tuệ</p>
         </div>
 
         <div class="quotes-container">
