--- a/pages/the-planet/home.html
+++ b/pages/the-planet/home.html
@@ -297,8 +297,8 @@
 
     <div class="container">
         <div class="header">
-            <h1>The Planet</h1>
-            <p class="subtitle">Wisdom from Africa</p>
+            <h1>My Personal Planet</h1>
+            <p class="subtitle">Health and Intellect</p>
         </div>
 
         <div class="quotes-container">
