Update footer text for home pages to reflect personal branding

--- a/pages/the-planet/home-vn.html
+++ b/pages/the-planet/home-vn.html
@@ -311,7 +311,7 @@
         </div>
 
         <div class="footer">
-            <p>&copy; 2025 Hành Tinh. Hãy Tiếp Tục Chạy.</p>
+            <p>&copy; 2025 Hành Tinh Của Tôi. Nơi của Sức Khoẻ và Trí Tuệ.</p>
         </div>
     </div>
 </body>
