--- a/pages/the-planet/home.html
+++ b/pages/the-planet/home.html
@@ -311,7 +311,7 @@
         </div>
 
         <div class="footer">
-            <p>&copy; 2025 The Planet. Keep Running.</p>
+            <p>&copy; 2025 My Personal Planet. The place of Health and Intellect.</p>
         </div>
     </div>
 </body>
