Add new pages for understanding and creating value in English and Vietnamese
- Created 'understanding-the-nature-of-value.html' to explore the concept of value, its forms, and contextual nature.
- Added 'values-creation-vn.html' for Vietnamese readers, covering similar themes on value creation and its importance.
- Introduced 'values-creation.html' as a comprehensive guide on value creation, including principles, habits, goals, skills, ethics, and self-motivation.

--- a/pages/writing-opinion/values-creation/values-creation.html
+++ b/pages/writing-opinion/values-creation/values-creation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Values Creation - My Personal Planet</title>
-    <link rel="stylesheet" href="../pages-styles.css">
+    <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
     <article class="content-article">
@@ -13,20 +13,25 @@
         </header>
 
         <section class="content-section">
-            <h2 class="main-point">Chapter 1: Understanding the Nature of Value</h2>
+            <h2 class="main-point">1. Understanding the Nature of Value</h2>
             <p>In our journey of learning, working, and interacting with the world, we frequently encounter the word <em>value</em>—personal value, core values, organizational values, and so on. But what, exactly, is the kind of value I refer to in this book?</p>
             <p>Value, in the context discussed here, is an abstract concept—yet one with concrete implications. It is anything that provides benefit, meaning, or significance to a particular subject. Value is not limited to grand principles or moral ideals; it is woven into the structure of existence itself.</p>
             <p>We can speak of value in two broad forms: <strong>tangible</strong> and <strong>intangible</strong>. Tangible value refers to physical or material benefits—food, water, shelter, tools, and other objects that support life and functionality. Water, for example, enables the very existence of living organisms. Intangible value, on the other hand, lies in ideas, thoughts, philosophies, and insights. Philosophy itself may not feed the body, but it nourishes the mind and expands human understanding.</p>
             <p>Almost every entity possesses its own inherent value. At the most fundamental level, there is the value of existence. A living creature, simply by being born, already contributes to the continuity of life. The instinct to survive and reproduce is itself the first expression of its value to the larger ecosystem.</p>
             <p>When we create something—an object, an idea, an action—we also create value. Creation is inherently tied to contribution. A new thought may inspire others; a small action may benefit a community; a crafted object may serve a practical need. In this sense, value arises whenever something we produce carries meaning or usefulness for someone or something else.</p>
             <p>Yet value is seldom absolute. An entity may be beneficial in one context while harmful in another. A tool that helps one person may pose danger to another. A belief that uplifts a community today may become outdated—or even destructive—in a different era. This ambiguity makes it difficult to judge whether something truly has value.</p>
+            <p>The Internet offers a clear illustration. For adults, it is an unprecedented space for learning, connection, and the expansion of knowledge. For children, however, the very same tool can become a source of serious risk if it is used without proper guidance and supervision. The value of the Internet, therefore, does not reside in the technology itself, but in who uses it and under what conditions.</p>
+            <p>Antibiotics demonstrate a similar dual nature. Once regarded as one of humanity’s most life-saving medical breakthroughs, they enabled people to overcome infections that had previously caused widespread death. Yet when misused or overused, antibiotics contribute to the rise of drug-resistant bacteria, threatening the foundations of modern medicine. What was once a remedy can become a danger, simply because the context of its use has changed.</p>
+            <p>Even tools closely associated with ethics and security, such as firearms, are subject to this ambiguity. In certain situations, a gun is viewed as a means of self-defense; in others, it becomes an instrument of violence and destruction. Judging firearms as inherently “good” or “bad” is impossible without considering the surrounding social environment, legal frameworks, and the moral awareness of those who possess them.</p>
+            <p>This contextual nature of value extends beyond physical tools to social ideas and belief systems. Gender-based discrimination in education was once justified as a way of “protecting” women, confining them to roles deemed appropriate or safe. Over time, however, such thinking has been recognized as a mechanism of limitation—one that restricts opportunities and undermines the principle of equality for half of humanity.</p>
+            <p>Similarly, the notion that children are the property of their parents served as a foundational assumption in many traditional societies. Within certain historical contexts, it helped maintain family order and social stability. Yet under contemporary understandings of human rights—particularly children’s rights—this belief is increasingly questioned and challenged.</p>
             <p>To make sense of this complexity, we can adopt a simple principle: <strong>if an entity produces more benefit than harm within a given context, we consider it to have value</strong>. But even this requires careful evaluation. Benefit and harm are shaped by historical conditions, specific environments, cultural perspectives, and the needs or perceptions of those who experience them.</p>
             <p>Therefore, determining whether something has value requires us to examine it within a specific context, and in relation to a particular subject or group of subjects. A value does not exist in isolation; it manifests through relationships—between creator and receiver, between object and environment, between intention and consequence.</p>
             <p>In the chapters that follow, we will explore how value is formed, how it evolves, and how individuals can both recognize and create value in their own lives. Understanding value is not just an intellectual exercise; it is a foundation for purposeful existence.</p>
         </section>
         
         <section class="content-section">
-            <h2 class="main-point">Why We Must Create Value</h2>
+            <h2 class="main-point">2. Why We Must Create Value</h2>
             <p>A person truly becomes valuable when they create value. Our worth is not defined by what we possess—knowledge, resources, or potential—but by what we produce for ourselves and for others. In this sense, value is not just an external measure; it is the foundation of our identity and our purpose.</p>
             <p>Many people question the meaning of life. But instead of searching endlessly for an abstract answer, we can create meaning by creating value. Life becomes meaningful when we contribute, when we solve problems, when we make something better than it was before. Without value, our existence loses direction. What is the meaning of life if we do not create anything that matters?</p>
             <p>Knowledge alone is not enough. We can read thousands of books, attend countless courses, and accumulate endless information—yet none of it becomes meaningful until it is applied. Knowledge transforms into value only when it is used to build, create, solve, or improve. Otherwise, it remains dormant—potential energy that never becomes action.</p>
@@ -249,6 +254,6 @@
     </section>
 
    <!-- Link to external JavaScript file -->
-    <script src="../pages-scripts.js"></script>
+    <script src="../../pages-scripts.js"></script>
 </body>
 </html>
