--- a/pages/writing-opinion/values-creation/values-creation-vn.html
+++ b/pages/writing-opinion/values-creation/values-creation-vn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tạo Ra Giá Trị - My Personal Planet</title>
-    <link rel="stylesheet" href="../pages-styles.css">
+    <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
     <article class="content-article">
@@ -13,20 +13,40 @@
         </header>
 
         <section class="content-section">
-            <h2 class="main-point">Chương 1: Hiểu Về Bản Chất Của Giá Trị</h2>
+            <h2 class="main-point">1. Hiểu Về Bản Chất Của Giá Trị</h2>
             <p>Trong hành trình học tập, làm việc và tương tác với thế giới, chúng ta thường xuyên gặp từ <em>giá trị</em>—giá trị cá nhân, giá trị cốt lõi, giá trị tổ chức, v.v. Nhưng chính xác thì loại giá trị mà tôi đề cập trong cuốn sách này là gì?</p>
             <p>Giá trị, trong bối cảnh được thảo luận ở đây, là một khái niệm trừu tượng—nhưng có những hàm ý cụ thể. Nó là bất cứ thứ gì mang lại lợi ích, ý nghĩa hoặc tầm quan trọng cho một chủ thể cụ thể. Giá trị không giới hạn ở các nguyên tắc vĩ đại hoặc lý tưởng đạo đức; nó được dệt nên trong cấu trúc của chính sự tồn tại.</p>
             <p>Chúng ta có thể nói về giá trị dưới hai hình thức rộng: <strong>hữu hình</strong> và <strong>vô hình</strong>. Giá trị hữu hình đề cập đến những lợi ích vật chất hoặc vật lý—thức ăn, nước, nơi trú ẩn, công cụ và các đồ vật khác hỗ trợ cuộc sống và chức năng. Ví dụ, nước cho phép sự tồn tại của các sinh vật sống. Mặt khác, giá trị vô hình nằm trong các ý tưởng, suy nghĩ, triết lý và hiểu biết. Triết học tự nó có thể không nuôi sống cơ thể, nhưng nó nuôi dưỡng tâm trí và mở rộng sự hiểu biết của con người.</p>
             <p>Hầu như mọi thực thể đều có giá trị vốn có của riêng nó. Ở cấp độ cơ bản nhất, có giá trị của sự tồn tại. Một sinh vật sống, chỉ đơn giản bằng việc được sinh ra, đã đóng góp vào sự liên tục của sự sống. Bản năng sinh tồn và sinh sản chính là biểu hiện đầu tiên của giá trị của nó đối với hệ sinh thái lớn hơn.</p>
             <p>Khi chúng ta tạo ra một cái gì đó—một đồ vật, một ý tưởng, một hành động—chúng ta cũng tạo ra giá trị. Sáng tạo vốn gắn liền với đóng góp. Một ý nghĩ mới có thể truyền cảm hứng cho người khác; một hành động nhỏ có thể có lợi cho cộng đồng; một vật thể được tạo ra có thể phục vụ một nhu cầu thực tế. Theo nghĩa này, giá trị phát sinh bất cứ khi nào thứ chúng ta sản xuất mang ý nghĩa hoặc sự hữu dụng cho ai đó hoặc cái gì đó khác.</p>
             <p>Tuy nhiên, giá trị hiếm khi tuyệt đối. Một thực thể có thể có lợi trong một bối cảnh trong khi lại có hại trong bối cảnh khác. Một công cụ giúp đỡ người này có thể gây nguy hiểm cho người khác. Một niềm tin nâng đỡ cộng đồng ngày hôm nay có thể trở nên lỗi thời—hoặc thậm chí phá hoại—trong một thời đại khác. Tính mơ hồ này khiến việc đánh giá liệu một thứ có thực sự có giá trị hay không trở nên khó khăn.</p>
+            <p>Internet là một ví dụ điển hình. Đối với người trưởng thành, đó là không gian học tập, kết nối và mở rộng hiểu biết chưa từng có trong lịch sử. Nhưng đối với trẻ em, cùng một công cụ ấy có thể trở thành nguồn nguy hiểm nếu thiếu định hướng và giám sát. Giá trị của Internet, vì thế, không nằm ở bản thân nó, mà ở người sử dụng và điều kiện sử dụng.</p>
+            <p>Thuốc kháng sinh cũng mang tính hai mặt tương tự. Chúng từng được xem là một trong những phát minh cứu sống nhân loại, giúp con người chiến thắng nhiều căn bệnh từng gây tử vong hàng loạt. Tuy nhiên, khi bị lạm dụng hoặc sử dụng sai cách, kháng sinh lại trở thành nguyên nhân tạo ra những chủng vi khuẩn kháng thuốc, đe dọa chính nền y học hiện đại. Thứ từng là cứu cánh có thể trở thành mối nguy, chỉ vì bối cảnh sử dụng đã thay đổi.</p>
+            <p>Ngay cả những công cụ gắn liền với vấn đề đạo đức và an ninh, như súng, cũng không thoát khỏi tính mơ hồ này. Trong một số hoàn cảnh, súng được xem là phương tiện tự vệ; trong những hoàn cảnh khác, nó lại là công cụ gây bạo lực và tước đoạt sinh mạng. Việc đánh giá súng là “tốt” hay “xấu” không thể tách rời khỏi môi trường xã hội, luật pháp và ý thức của con người sở hữu nó.</p>
+            <p>Không chỉ các công cụ vật chất, những tư tưởng và niềm tin xã hội cũng chịu sự thay đổi tương tự. Tư tưởng phân biệt giới tính trong giáo dục từng được biện minh như một cách “bảo vệ” phụ nữ, giới hạn họ trong những vai trò được cho là phù hợp và an toàn. Nhưng theo thời gian, chính tư tưởng ấy bị nhận ra là một hình thức kìm hãm, tước đi cơ hội phát triển và quyền bình đẳng của một nửa nhân loại.</p>
+            <p>Tương tự, quan niệm coi con cái là tài sản của cha mẹ từng là nền tảng của nhiều xã hội truyền thống. Trong bối cảnh lịch sử nhất định, nó giúp duy trì trật tự gia đình và xã hội. Tuy nhiên, dưới ánh sáng của nhận thức hiện đại về quyền con người, đặc biệt là quyền trẻ em, quan niệm ấy ngày càng bị chất vấn và xem xét lại.</p>
             <p>Để hiểu rõ sự phức tạp này, chúng ta có thể áp dụng một nguyên tắc đơn giản: <strong>nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong một bối cảnh nhất định, chúng ta coi nó có giá trị</strong>. Nhưng ngay cả điều này đòi hỏi đánh giá cẩn thận. Lợi ích và tác hại được định hình bởi các điều kiện lịch sử, môi trường cụ thể, quan điểm văn hóa và nhu cầu hoặc nhận thức của những người trải nghiệm chúng.</p>
             <p>Do đó, việc xác định liệu một thứ có giá trị hay không đòi hỏi chúng ta phải kiểm tra nó trong một bối cảnh cụ thể và liên quan đến một chủ thể hoặc nhóm chủ thể cụ thể. Một giá trị không tồn tại độc lập; nó biểu hiện thông qua các mối quan hệ—giữa người tạo ra và người nhận, giữa đối tượng và môi trường, giữa ý định và hậu quả.</p>
             <p>Trong các chương tiếp theo, chúng ta sẽ khám phá cách giá trị được hình thành, cách nó phát triển và cách các cá nhân có thể vừa nhận ra vừa tạo ra giá trị trong cuộc sống của chính họ. Hiểu về giá trị không chỉ là một bài tập trí tuệ; nó là nền tảng cho sự tồn tại có mục đích.</p>
-        </section>
-        
+
+            <div class="sub-section">
+                <h3 class="sub-point-1">Tóm Tắt Các Điểm Chính</h3>
+                <ul class="outline-list">
+                    <li><strong>Định nghĩa giá trị:</strong> Giá trị là bất cứ thứ gì mang lại lợi ích, ý nghĩa hoặc tầm quan trọng cho một chủ thể cụ thể</li>
+                    <li><strong>Hai hình thức giá trị:</strong>
+                        <ul>
+                            <li><em>Hữu hình:</em> Lợi ích vật chất (thức ăn, nước, công cụ)</li>
+                            <li><em>Vô hình:</em> Ý tưởng, triết lý, hiểu biết</li>
+                        </ul>
+                    </li>
+                    <li><strong>Giá trị vốn có:</strong> Mọi thực thể đều có giá trị của sự tồn tại, đóng góp vào hệ sinh thái lớn hơn</li>
+                    <li><strong>Giá trị qua sáng tạo:</strong> Khi tạo ra điều gì đó, chúng ta tạo ra giá trị cho người khác</li>
+                    <li><strong>Tính tương đối của giá trị:</strong> Một thứ có thể có lợi trong bối cảnh này nhưng có hại trong bối cảnh khác</li>
+                    <li><strong>Nguyên tắc đánh giá:</strong> Nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong bối cảnh cụ thể, ta coi nó có giá trị</li>
+                    <li><strong>Giá trị và mối quan hệ:</strong> Giá trị không tồn tại độc lập mà biểu hiện qua mối quan hệ giữa người tạo ra, người nhận, bối cảnh và hậu quả</li>
+                </ul>
         <section class="content-section">
-            <h2 class="main-point">Tại Sao Chúng Ta Phải Tạo Ra Giá Trị</h2>
+            <h2 class="main-point">2. Tại Sao Chúng Ta Phải Tạo Ra Giá Trị</h2>
             <p>Một người thực sự trở nên có giá trị khi họ tạo ra giá trị. Giá trị của chúng ta không được xác định bởi những gì chúng ta sở hữu—kiến thức, nguồn lực, hoặc tiềm năng—mà bởi những gì chúng ta tạo ra cho bản thân và cho người khác. Theo nghĩa này, giá trị không chỉ là một thước đo bên ngoài; nó là nền tảng của bản sắc và mục đích của chúng ta.</p>
             <p>Nhiều người đặt câu hỏi về ý nghĩa của cuộc sống. Nhưng thay vì tìm kiếm mãi mãi một câu trả lời trừu tượng, chúng ta có thể tạo ra ý nghĩa bằng cách tạo ra giá trị. Cuộc sống trở nên có ý nghĩa khi chúng ta đóng góp, khi chúng ta giải quyết vấn đề, khi chúng ta làm cho một cái gì đó tốt hơn trước. Không có giá trị, sự tồn tại của chúng ta mất phương hướng. Ý nghĩa của cuộc sống là gì nếu chúng ta không tạo ra bất cứ điều gì quan trọng?</p>
             <p>Chỉ có kiến thức thôi là chưa đủ. Chúng ta có thể đọc hàng ngàn cuốn sách, tham dự vô số khóa học và tích lũy thông tin vô tận—nhưng không có gì trong số đó trở nên có ý nghĩa cho đến khi nó được áp dụng. Kiến thức chuyển thành giá trị chỉ khi nó được sử dụng để xây dựng, tạo ra, giải quyết hoặc cải thiện. Nếu không, nó vẫn ở trạng thái tiềm ẩn—năng lượng tiềm năng không bao giờ trở thành hành động.</p>
@@ -249,6 +269,6 @@
     </section>
 
    <!-- Link to external JavaScript file -->
-    <script src="../pages-scripts.js"></script>
+    <script src="../../pages-scripts.js"></script>
 </body>
 </html>
