Refine descriptions of inherent value and evaluation principles for clarity and depth in both English and Vietnamese versions

--- a/pages/writing-opinion/values-creation/understanding-the-nature-of-value-vn.html
+++ b/pages/writing-opinion/values-creation/understanding-the-nature-of-value-vn.html
@@ -39,10 +39,10 @@
                             <li><em>Vô hình:</em> Ý tưởng, triết lý, hiểu biết</li>
                         </ul>
                     </li>
-                    <li><strong>Giá trị vốn có:</strong> Mọi thực thể đều có giá trị của sự tồn tại, đóng góp vào hệ sinh thái lớn hơn</li>
+                    <li><strong>Giá trị vốn có:</strong> Theo góc nhìn sinh thái, mọi thực thể đều có giá trị của sự tồn tại, đóng góp vào hệ sinh thái lớn hơn hoặc ít nhất là duy trì giống nòi của nó</li>
                     <li><strong>Giá trị qua sáng tạo:</strong> Khi tạo ra điều gì đó, chúng ta tạo ra giá trị cho người khác</li>
                     <li><strong>Tính tương đối của giá trị:</strong> Một thứ có thể có lợi trong bối cảnh này nhưng có hại trong bối cảnh khác</li>
-                    <li><strong>Nguyên tắc đánh giá:</strong> Nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong bối cảnh cụ thể, ta coi nó có giá trị</li>
+                    <li><strong>Nguyên tắc đánh giá:</strong> Nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong bối cảnh cụ thể, ta coi nó có giá trị. Đây là công cụ tạm thời để suy xét trong những tình huống cụ thể, không phải tiêu chuẩn tuyệt đối</li>
                     <li><strong>Giá trị và mối quan hệ:</strong> Giá trị không tồn tại độc lập mà biểu hiện qua mối quan hệ giữa người tạo ra, người nhận, bối cảnh và hậu quả</li>
                 </ul>
             </div>
