--- a/pages/writing-opinion/values-creation/understanding-the-nature-of-value.html
+++ b/pages/writing-opinion/values-creation/understanding-the-nature-of-value.html
@@ -39,10 +39,10 @@
                             <li><em>Intangible:</em> Ideas, philosophies, understanding</li>
                         </ul>
                     </li>
-                    <li><strong>Inherent Value:</strong> Every entity possesses value through its very existence, contributing to the larger ecosystem</li>
+                    <li><strong>Inherent Value:</strong> From an ecological perspective, every entity possesses value through its very existence, contributing to the larger ecosystem or at least to the preservation of its species</li>
                     <li><strong>Value Through Creation:</strong> When we create something, we create value for others</li>
                     <li><strong>Relativity of Value:</strong> Something beneficial in one context may be harmful in another</li>
-                    <li><strong>Principle of Evaluation:</strong> If an entity produces more benefit than harm in a given context, we consider it to have value</li>
+                    <li><strong>Principle of Evaluation:</strong> If an entity produces more benefit than harm in a given context, we consider it to have value. This is a provisional tool for deliberation in specific situations, not an absolute standard</li>
                     <li><strong>Value and Relationships:</strong> Value does not exist in isolation but manifests through relationships between creator, receiver, environment, and consequence</li>
                 </ul>
             </div>
