Add Vietnamese and English versions of value creation articles
- Created "1-understanding-the-nature-of-value" in both Vietnamese and English.
- Created "2-why-we-must-create-value" in both Vietnamese and English.
- Added initial structure for "3-creating-value-through-actions" in Vietnamese.

--- a/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value-vn.html
+++ b/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value-vn.html
@@ -8,12 +8,11 @@
 <body>
     <article class="content-article">
         <header class="article-header">
-            <h1 class="page-title">Hiểu Về Bản Chất Của Giá Trị</h1>
+            <h1 class="page-title">1. Hiểu Về Bản Chất Của Giá Trị</h1>
             <p class="page-subtitle">Nền tảng, động lực và thực hành để tạo ra giá trị có ý nghĩa</p>
         </header>
 
         <section class="content-section">
-            <h2 class="main-point">Hiểu Về Bản Chất Của Giá Trị</h2>
             <p>Trong hành trình học tập, làm việc và tương tác với thế giới, chúng ta thường xuyên gặp từ <em>giá trị</em>—giá trị cá nhân, giá trị cốt lõi, giá trị tổ chức, v.v. Nhưng chính xác thì loại giá trị mà tôi đề cập trong cuốn sách này là gì?</p>
             <p>Giá trị, trong bối cảnh được thảo luận ở đây, là một khái niệm trừu tượng—nhưng có những hàm ý cụ thể. Nó là bất cứ thứ gì mang lại lợi ích, ý nghĩa hoặc tầm quan trọng cho một chủ thể cụ thể. Giá trị không giới hạn ở các nguyên tắc vĩ đại hoặc lý tưởng đạo đức; nó được dệt nên trong cấu trúc của chính sự tồn tại.</p>
             <p>Chúng ta có thể nói về giá trị dưới hai hình thức rộng: <strong>hữu hình</strong> và <strong>vô hình</strong>. Giá trị hữu hình đề cập đến những lợi ích vật chất hoặc vật lý—thức ăn, nước, nơi trú ẩn, công cụ và các đồ vật khác hỗ trợ cuộc sống và chức năng. Ví dụ, nước cho phép sự tồn tại của các sinh vật sống. Mặt khác, giá trị vô hình nằm trong các ý tưởng, suy nghĩ, triết lý và hiểu biết. Triết học tự nó có thể không nuôi sống cơ thể, nhưng nó nuôi dưỡng tâm trí và mở rộng sự hiểu biết của con người.</p>
@@ -27,6 +26,7 @@
             <p>Tương tự, quan niệm coi con cái là tài sản của cha mẹ từng là nền tảng của nhiều xã hội truyền thống. Trong bối cảnh lịch sử nhất định, nó giúp duy trì trật tự gia đình và xã hội. Tuy nhiên, dưới ánh sáng của nhận thức hiện đại về quyền con người, đặc biệt là quyền trẻ em, quan niệm ấy ngày càng bị chất vấn và xem xét lại.</p>
             <p>Để hiểu rõ sự phức tạp này, chúng ta có thể áp dụng một nguyên tắc đơn giản: <strong>nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong một bối cảnh nhất định, chúng ta coi nó có giá trị</strong>. Nhưng ngay cả điều này đòi hỏi đánh giá cẩn thận. Lợi ích và tác hại được định hình bởi các điều kiện lịch sử, môi trường cụ thể, quan điểm văn hóa và nhu cầu hoặc nhận thức của những người trải nghiệm chúng. Nguyên tắc này không nhằm thiết lập một tiêu chuẩn tuyệt đối, mà chỉ đóng vai trò như một công cụ tạm thời để suy xét trong những tình huống cụ thể.</p>
             <p>Do đó, việc xác định liệu một thứ có giá trị hay không đòi hỏi chúng ta phải kiểm tra nó trong một bối cảnh cụ thể và liên quan đến một chủ thể hoặc nhóm chủ thể cụ thể. Một giá trị không tồn tại độc lập; nó biểu hiện thông qua các mối quan hệ—giữa người tạo ra và người nhận, giữa đối tượng và môi trường, giữa ý định và hậu quả.</p>
+            <p>Cuối cùng, điều quan trọng là phải phân biệt giữa <strong>giá trị (values, outcome)</strong> và <strong>đầu ra (output)</strong>. Đầu ra là những gì bạn sản xuất—các nhiệm vụ hoàn thành, giờ làm việc, hành động thực hiện. Kết quả là tác động được tạo ra—sự thay đổi, cải tiến, lợi ích. Kết quả yêu cầu đầu ra, nhưng chỉ có đầu ra không đảm bảo kết quả. Giá trị thực sự nằm ở kết quả, không phải hoạt động đơn thuần.</p>
             <p>Trong các chương tiếp theo, chúng ta sẽ khám phá cách giá trị được hình thành, cách nó phát triển và cách các cá nhân có thể vừa nhận ra vừa tạo ra giá trị trong cuộc sống của chính họ. Hiểu về giá trị không chỉ là một bài tập trí tuệ; nó là nền tảng cho sự tồn tại có mục đích.</p>
 
             <div class="sub-section">
@@ -44,6 +44,7 @@
                     <li><strong>Tính tương đối của giá trị:</strong> Một thứ có thể có lợi trong bối cảnh này nhưng có hại trong bối cảnh khác</li>
                     <li><strong>Nguyên tắc đánh giá:</strong> Nếu một thực thể tạo ra nhiều lợi ích hơn tác hại trong bối cảnh cụ thể, ta coi nó có giá trị. Đây là công cụ tạm thời để suy xét trong những tình huống cụ thể, không phải tiêu chuẩn tuyệt đối</li>
                     <li><strong>Giá trị và mối quan hệ:</strong> Giá trị không tồn tại độc lập mà biểu hiện qua mối quan hệ giữa người tạo ra, người nhận, bối cảnh và hậu quả</li>
+                    <li><strong>Phân biệt giá trị và đầu ra:</strong> Đầu ra là những gì bạn sản xuất, trong khi giá trị nằm ở kết quả và tác động tạo ra</li>
                 </ul>
             </div>
         </section>
