--- a/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
+++ b/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
@@ -8,12 +8,11 @@
 <body>
     <article class="content-article">
         <header class="article-header">
-            <h1 class="page-title">Understanding the Nature of Value</h1>
+            <h1 class="page-title">1. Understanding the Nature of Value</h1>
             <p class="page-subtitle">Foundations, motivations, and practices for creating meaningful value</p>
         </header>
 
         <section class="content-section">
-            <h2 class="main-point">Understanding the Nature of Value</h2>
             <p>In our journey of learning, working, and interacting with the world, we frequently encounter the word <em>value</em>—personal value, core values, organizational values, and so on. But what, exactly, is the kind of value I refer to in this book?</p>
             <p>Value, in the context discussed here, is an abstract concept—yet one with concrete implications. It is anything that provides benefit, meaning, or significance to a particular subject. Value is not limited to grand principles or moral ideals; it is woven into the structure of existence itself.</p>
             <p>We can speak of value in two broad forms: <strong>tangible</strong> and <strong>intangible</strong>. Tangible value refers to physical or material benefits—food, water, shelter, tools, and other objects that support life and functionality. Water, for example, enables the very existence of living organisms. Intangible value, on the other hand, lies in ideas, thoughts, philosophies, and insights. Philosophy itself may not feed the body, but it nourishes the mind and expands human understanding.</p>
@@ -27,6 +26,7 @@
             <p>Similarly, the notion that children are the property of their parents served as a foundational assumption in many traditional societies. Within certain historical contexts, it helped maintain family order and social stability. Yet under contemporary understandings of human rights—particularly children's rights—this belief is increasingly questioned and challenged.</p>
             <p>To make sense of this complexity, we can adopt a simple principle: <strong>if an entity produces more benefit than harm within a given context, we consider it to have value</strong>. But even this requires careful evaluation. Benefit and harm are shaped by historical conditions, specific environments, cultural perspectives, and the needs or perceptions of those who experience them. This principle is not intended to establish an absolute standard, but rather serves as a provisional tool for deliberation in specific situations.</p>
             <p>Therefore, determining whether something has value requires us to examine it within a specific context, and in relation to a particular subject or group of subjects. A value does not exist in isolation; it manifests through relationships—between creator and receiver, between object and environment, between intention and consequence.</p>
+            <p>Finally, it is important to distinguish between <strong>value (values, outcome)</strong> and <strong>output</strong>. Output is what you produce—tasks completed, hours worked, actions taken. Outcome is the impact created—change, improvement, benefit. Outcomes require outputs, but outputs alone do not guarantee outcomes. True value lies in outcomes, not in activity for its own sake.</p>
             <p>In the chapters that follow, we will explore how value is formed, how it evolves, and how individuals can both recognize and create value in their own lives. Understanding value is not just an intellectual exercise; it is a foundation for purposeful existence.</p>
 
             <div class="sub-section">
@@ -44,6 +44,7 @@
                     <li><strong>Relativity of Value:</strong> Something beneficial in one context may be harmful in another</li>
                     <li><strong>Principle of Evaluation:</strong> If an entity produces more benefit than harm in a given context, we consider it to have value. This is a provisional tool for deliberation in specific situations, not an absolute standard</li>
                     <li><strong>Value and Relationships:</strong> Value does not exist in isolation but manifests through relationships between creator, receiver, environment, and consequence</li>
+                    <li><strong>Distinguish Value vs Output:</strong> Output is what you produce, while value lies in outcomes and the impact created</li>
                 </ul>
             </div>
         </section>
