Refine titles in introduction pages to enhance clarity: "Giới thiệu" to "Lời mở đầu" (Vietnamese) and "Introduction" to "Preface" (English)

--- a/pages/writing-opinion/values-creation/0-introduction.html
+++ b/pages/writing-opinion/values-creation/0-introduction.html
@@ -10,12 +10,11 @@
 <body>
 	<article class="content-article">
 		<header class="article-header">
-			<h1 class="page-title">Introduction</h1>
+			<h1 class="page-title">Preface</h1>
 			<p class="page-subtitle">Preface</p>
 		</header>
 
 		<section class="content-section">
-			<h2 class="main-point">Preface</h2>
 			<p>I write these lines not because I believe I have understood life, but because I am deeply aware that what I have learned and experienced—if not written down—will fade with time and disappear as I grow old. Writing, for me, is a way to preserve the most important insights I have accumulated about creating value in life—for myself, for others, and for the society in which I live.</p>
 
 			<p>I am not sure how many people this book will help. For some, it may not be new; for others, it may not be deep enough. But I believe that, at the very least, it will be a guide written with seriousness and heart—something I can leave to my children and grandchildren in the future, as a foundation for them to understand that value does not arise on its own, and that life becomes meaningful when we create value for others.</p>
