--- a/pages/writing-opinion/values-creation/0-introduction-vn.html
+++ b/pages/writing-opinion/values-creation/0-introduction-vn.html
@@ -10,12 +10,11 @@
 <body>
 	<article class="content-article">
 		<header class="article-header">
-			<h1 class="page-title">Giới thiệu</h1>
+			<h1 class="page-title">Lời mở đầu</h1>
 			<p class="page-subtitle">Lời mở đầu</p>
 		</header>
 
 		<section class="content-section">
-			<h2 class="main-point">Lời mở đầu</h2>
 			<p>Tôi viết những dòng này không phải vì tin rằng mình đã hiểu hết cuộc sống, mà bởi tôi ý thức rất rõ rằng: những gì tôi đã học được, đã trải nghiệm được, nếu không được ghi chép lại, rồi cũng sẽ phai mờ theo thời gian và biến mất khi tôi già đi. Viết, với tôi, là một cách để lưu giữ những nhận thức quan trọng nhất mà tôi đã tích lũy được về việc tạo ra giá trị trong cuộc sống — cho bản thân, cho người khác, và cho xã hội mà tôi đang sống trong đó.</p>
 
 			<p>Tôi không chắc những điều tôi chia sẻ trong cuốn sách này có thể giúp ích được cho bao nhiêu người. Có thể với một số người, chúng sẽ không mới. Có thể với số khác, chúng chưa đủ sâu. Nhưng tôi tin rằng, ít nhất, đây sẽ là một bản hướng dẫn được viết ra bằng sự nghiêm túc và tâm huyết — một điều gì đó mà tôi có thể để lại cho con cháu mình trong tương lai, như một nền tảng để chúng hiểu rằng giá trị không tự nhiên mà có, và cuộc sống có ý nghĩa khi con người biết tạo ra giá trị cho người khác.</p>
