Add new section on "Creating Value Through Actions" and update navigation
- Introduced a new menu item for "3. Tạo Ra Giá Trị Qua Hành Động" in main-menu-vn.js and its English counterpart in main-menu.js.
- Created the Vietnamese version of the content for "3-creating-value-through-actions-vn.html" with detailed insights on the importance of small, consistent actions in creating value.
- Developed the English version of "3-creating-value-through-actions.html" with similar content structure and themes.
- Updated the contents-vn.html and contents.html to reflect the new chapter and its key points.
- Revised existing content in "0-introduction-vn.html" and "0-introduction.html" to enhance clarity and engagement.
- Adjusted the section on "Understanding the Nature of Value" to better articulate the relationship between action, wisdom, and value creation.

--- a/pages/writing-opinion/values-creation/contents-vn.html
+++ b/pages/writing-opinion/values-creation/contents-vn.html
@@ -122,15 +122,17 @@
                 <h2 class="main-point">Phần II: Tạo Ra Giá Trị Qua Hành Động</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        3. Tạo Ra Giá Trị Qua Hành Động Và Thói Quen
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="3-creating-value-through-actions-vn.html">3. Tạo Ra Giá Trị Qua Hành Động</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Tập trung vào đóng góp: Những việc nhỏ được làm một cách nhất quán</li>
-                        <li>Xây dựng thói quen hiệu quả</li>
-                        <li>Kỷ luật vs Động lực</li>
-                        <li>Tính nhất quán quan trọng hơn cường độ</li>
+                        <li>Hành động nhỏ, đều đặn tạo nên giá trị lớn</li>
+                        <li>Nhận thức trao ý nghĩa cho hành động</li>
+                        <li>Hành động là điều kiện tồn tại</li>
+                        <li>Giá trị cần bối cảnh để đánh giá</li>
+                        <li>Trí tuệ dẫn dắt hành động và trách nhiệm</li>
+                        <li>Giá trị bền vững = Hành động + Hiểu biết + Trách nhiệm</li>
                     </ul>
                 </div>
 
