--- a/pages/writing-opinion/values-creation/contents.html
+++ b/pages/writing-opinion/values-creation/contents.html
@@ -122,15 +122,17 @@
                 <h2 class="main-point">Part II: Creating Value Through Action</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        3. Creating Value Through Action and Habits
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="3-creating-value-through-actions.html">3. Creating Value Through Actions</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Focus on Contribution: Small things done consistently</li>
-                        <li>Building Effective Habits</li>
-                        <li>Discipline vs Motivation</li>
-                        <li>Consistency beats intensity</li>
+                        <li>Small, steady actions build value</li>
+                        <li>Perception gives action its meaning</li>
+                        <li>Action is a condition of existence</li>
+                        <li>Value requires context to judge</li>
+                        <li>Wisdom guides action and responsibility</li>
+                        <li>Sustainable value = Action + Understanding + Responsibility</li>
                     </ul>
                 </div>
 
