--- a/pages/writing-opinion/values-creation/0-introduction-vn.html
+++ b/pages/writing-opinion/values-creation/0-introduction-vn.html
@@ -15,13 +15,13 @@
 		</header>
 
 		<section class="content-section">
-			<p>Tôi viết những dòng này không phải vì tin rằng mình đã hiểu hết cuộc sống, mà bởi tôi ý thức rất rõ rằng: những gì tôi đã học được, đã trải nghiệm được, nếu không được ghi chép lại, rồi cũng sẽ phai mờ theo thời gian và biến mất khi tôi già đi. Viết, với tôi, là một cách để lưu giữ những nhận thức quan trọng nhất mà tôi đã tích lũy được về việc tạo ra giá trị trong cuộc sống — cho bản thân, cho người khác, và cho xã hội mà tôi đang sống trong đó.</p>
+			<p>Tôi viết những dòng này không phải vì tin rằng mình đã hiểu hết cuộc sống, mà bởi tôi ý thức rất rõ một điều: nhận thức, nếu không được giữ lại bằng chữ nghĩa, sẽ dần phai mờ, rồi biến mất như thể chưa từng tồn tại.</p>
 
 			<p>Tôi không chắc những điều tôi chia sẻ trong cuốn sách này có thể giúp ích được cho bao nhiêu người. Có thể với một số người, chúng sẽ không mới. Có thể với số khác, chúng chưa đủ sâu. Nhưng tôi tin rằng, ít nhất, đây sẽ là một bản hướng dẫn được viết ra bằng sự nghiêm túc và tâm huyết — một điều gì đó mà tôi có thể để lại cho con cháu mình trong tương lai, như một nền tảng để chúng hiểu rằng giá trị không tự nhiên mà có, và cuộc sống có ý nghĩa khi con người biết tạo ra giá trị cho người khác.</p>
 
 			<p>Những gì được trình bày ở đây không phải là công thức thành công, cũng không phải lời hứa về một cuộc sống dễ dàng. Đây là những nguyên lý nền tảng mà tôi tin rằng có thể áp dụng cho hầu hết mọi người — đặc biệt là những ai đang loay hoay, chưa có một hệ quy chiếu hay một hướng dẫn rõ ràng để xác định con đường mình muốn đi và mục tiêu mình muốn đạt tới trong cuộc sống.</p>
 
-			<p>Cuốn sách này, về bản chất, là một personal philosophy framework — một hệ thống tư duy cá nhân về việc hiểu giá trị là gì, vì sao chúng ta cần tạo ra giá trị, và làm thế nào để từng bước xây dựng một cuộc sống có ý nghĩa thông qua hành động, kỷ luật, năng lực, và sự đóng góp bền vững cho người khác. Nếu những trang viết này có thể giúp ai đó nhìn rõ hơn con đường của mình, dù chỉ một chút, thì với tôi, giá trị của việc viết ra chúng đã được tạo nên.</p>
+			<p>Cuốn sách này, về bản chất, là một personal philosophy framework — không nhằm thay thế bất kỳ hệ tư tưởng nào, mà chỉ phản ánh cách tôi đã học cách nhìn, suy nghĩ và hành động trước câu hỏi về giá trị.</p>
 		</section>
 	</article>
 
