--- a/pages/writing-opinion/values-creation/0-introduction.html
+++ b/pages/writing-opinion/values-creation/0-introduction.html
@@ -15,13 +15,13 @@
 		</header>
 
 		<section class="content-section">
-			<p>I write these lines not because I believe I have understood life, but because I am deeply aware that what I have learned and experienced—if not written down—will fade with time and disappear as I grow old. Writing, for me, is a way to preserve the most important insights I have accumulated about creating value in life—for myself, for others, and for the society in which I live.</p>
+			<p>I write these lines not because I believe I have understood life, but because I am acutely aware of this: understanding, if not held in words, gradually fades and may disappear as if it had never existed.</p>
 
 			<p>I am not sure how many people this book will help. For some, it may not be new; for others, it may not be deep enough. But I believe that, at the very least, it will be a guide written with seriousness and heart—something I can leave to my children and grandchildren in the future, as a foundation for them to understand that value does not arise on its own, and that life becomes meaningful when we create value for others.</p>
 
 			<p>What is presented here is not a formula for success, nor a promise of an easy life. These are foundational principles that I believe can apply to most people—especially those who are struggling, without a frame of reference or clear guidance to define the path they wish to take and the goals they wish to pursue in life.</p>
 
-			<p>This book is, in essence, a personal philosophy framework—a personal system of thinking about what value is, why we must create it, and how to gradually build a meaningful life through action, discipline, capability, and sustained contribution to others. If these pages help anyone see their path a little more clearly, then for me, the value of writing them has been created.</p>
+			<p>This book is, at its core, a personal philosophy framework—not intended to replace any doctrine, but simply to reflect how I have learned to see, think, and act in response to the question of value.</p>
 		</section>
 	</article>
 
