Add "Sustainable and Ethical Value Creation" section with navigation updates in English and Vietnamese

--- a/pages/writing-opinion/values-creation/contents-vn.html
+++ b/pages/writing-opinion/values-creation/contents-vn.html
@@ -137,9 +137,9 @@
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        4. Tạo Ra Giá Trị Bền Vững Và Đạo Đức
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="4-sustainable-ethical-value-creation-vn.html">4. Tạo Ra Giá Trị Bền Vững Và Đạo Đức</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
                         <li>Tạo ra giá trị bền vững</li>
