--- a/pages/writing-opinion/values-creation/contents.html
+++ b/pages/writing-opinion/values-creation/contents.html
@@ -137,9 +137,9 @@
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        4. Sustainable & Ethical Value Creation
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="4-sustainable-ethical-value-creation.html">4. Sustainable & Ethical Value Creation</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
                         <li>Creating sustainable value</li>
