--- a/pages/writing-opinion/values-creation/temp.html
+++ b/pages/writing-opinion/values-creation/temp.html
@@ -89,21 +89,7 @@ Aristotle
 
 39. Tức giận là đáng khen ngợi nếu bạn có thể làm được như sau: ở đúng nơi, dùng cho đúng đối tượng, đúng thời điểm và đúng lý do.
 
--------
-giọng chiêm nghiệm – triết lý
 
---------
-Đáng giá nội dung sau qua các tiêu chí: logic, đủ dẫn chứng, giọng văn, khả năng phản biện, tính đúng đắn của dẫn chứng
-
----------
-I updated this file please update the EN version
-
--------
-
-Only apply style of template-notes.html to create html for the content of this file, and then add route to it in main-menu-vn.js
-
--------
-Create "Tóm Tắt Các Điểm Chính" with the same way as of 1-understanding-the-nature-of-value-vn.html
-
--------
-Create English version of this file as 3-creating-value-through-actions.html, and then add route to it in main-menu.js
+- Lời nói đầu
+  - Tôi đưa ta ví dụ dẫn chứng của một tư tưởng triết học của một ai đó thì không hẳn tôi hoàn toàn ủng hộ toàn bộ tư tưởng, chỉ là họ có ý mà tôi thích và nó bổ sung cho tư tưởng tôi trình bày
+  - Những gì tôi viết ở đây là những kiến thức hầu như đã được biết tới, chỉ có điều khác biệt là tôi thệ thống nó theo cách riêng của mình để làm phương hướng.
