Add content to "Lời mở đầu" section and create "Health and Clarity of Mind" page

--- a/pages/writing-opinion/values-creation/0-introduction-vn.html
+++ b/pages/writing-opinion/values-creation/0-introduction-vn.html
@@ -21,6 +21,10 @@
 
 			<p>Những gì được trình bày ở đây không phải là công thức thành công, cũng không phải lời hứa về một cuộc sống dễ dàng. Đây là những nguyên lý nền tảng mà tôi tin rằng có thể áp dụng cho hầu hết mọi người — đặc biệt là những ai đang loay hoay, chưa có một hệ quy chiếu hay một hướng dẫn rõ ràng để xác định con đường mình muốn đi và mục tiêu mình muốn đạt tới trong cuộc sống.</p>
 
+			<p>Trong quá trình trình bày, tôi có thể mượn và trích dẫn những tư tưởng triết học của nhiều cá nhân khác nhau. Việc làm đó không đồng nghĩa với việc tôi hoàn toàn ủng hộ hay tiếp nhận toàn bộ hệ tư tưởng của bất kỳ ai. Mỗi tư tưởng, với tôi, chỉ là một lát cắt—một ý niệm cụ thể mà tôi thấy có giá trị, phù hợp hoặc bổ sung cho mạch suy nghĩ mà tôi đang trình bày. Tôi chọn chúng vì tính gợi mở, không vì tính toàn diện hay thẩm quyền tuyệt đối của người nói ra nó.</p>
+
+			<p>Những điều tôi viết trong cuốn sách này, trên thực tế, phần lớn không phải là những tri thức mới mẻ. Nhiều ý tưởng đã được biết đến, được thảo luận và tồn tại từ lâu dưới những hình thức khác nhau. Điểm khác biệt, nếu có, nằm ở cách tôi hệ thống và sắp xếp chúng theo trải nghiệm và góc nhìn cá nhân—như một nỗ lực xây dựng một phương hướng tư duy nhất quán, đủ rõ ràng để chính tôi có thể dựa vào đó mà hành động và phản tỉnh. Tôi không đặt mục tiêu tạo ra một học thuyết mới, mà chỉ mong chia sẻ một cách tiếp cận có thể giúp người đọc tự tìm ra con đường phù hợp cho riêng mình.</p>
+
 			<p>Cuốn sách này, về bản chất, là một personal philosophy framework — không nhằm thay thế bất kỳ hệ tư tưởng nào, mà chỉ phản ánh cách tôi đã học cách nhìn, suy nghĩ và hành động trước câu hỏi về giá trị.</p>
 		</section>
 	</article>
