--- a/pages/writing-opinion/values-creation/0-introduction.html
+++ b/pages/writing-opinion/values-creation/0-introduction.html
@@ -21,6 +21,10 @@
 
 			<p>What is presented here is not a formula for success, nor a promise of an easy life. These are foundational principles that I believe can apply to most people—especially those who are struggling, without a frame of reference or clear guidance to define the path they wish to take and the goals they wish to pursue in life.</p>
 
+			<p>In presenting these ideas, I may borrow and cite philosophical thoughts from many different individuals. This does not mean I fully endorse or embrace the entire philosophical system of anyone. For me, each idea is simply a slice—a specific notion that I find valuable, fitting, or complementary to the line of thinking I am presenting. I choose them because of their openness, not because of their comprehensiveness or the absolute authority of who voiced them.</p>
+
+			<p>In truth, most of what I write in this book is not entirely new knowledge. Many ideas have been known, discussed, and existed in various forms for a long time. The difference, if there is one, lies in how I systematize and arrange them according to my own experience and perspective—as an effort to build a consistent direction of thought, clear enough that I can act and reflect upon it. I do not aim to create a new doctrine, only to share an approach that might help readers find the path suitable for themselves.</p>
+
 			<p>This book is, at its core, a personal philosophy framework—not intended to replace any doctrine, but simply to reflect how I have learned to see, think, and act in response to the question of value.</p>
 		</section>
 	</article>
