Add reflections on love and ethics to "Sustainable and Ethical Value Creation" section

--- a/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
+++ b/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
@@ -24,6 +24,14 @@
 
 			<p>What lies within our control is how we choose to act. Rather than trying to adjust the outside world, I focus on inner development—building a consistent rule of action that does not conflict with my conscience even when it is not reciprocated. Ethics, in this sense, is a voluntary boundary we set for ourselves.</p>
 
+			<p>While writing this section, a small coincidence made me pause. On a bookshelf, I came across Kent M. Keith's "The Paradoxical Commandments." The first item reads: "People are illogical, unreasonable, and self-centered. But love them anyway."</p>
+
+			<p>This statement does not deny human irrationality; it acknowledges it as an unavoidable reality. In some ways, this irrationality may stem from fundamental differences between people—in experience, circumstances, fears, or how they see the world. The key lies here: we can barely change others through our wishes or logic alone. The only thing within our control is how we choose to act in the face of that irrationality.</p>
+
+			<p>In that spirit, "love" is not a mandatory ethical demand I set here. I do not claim everyone must love others for their actions to have value. The minimum principle I pursue remains: do no harm. However, if one can go further—if in certain circumstances we are grounded enough to choose love—that would be something precious. Because deep within each person, whether rational or irrational, everyone longs to be understood and loved in some way.</p>
+
+			<p>Seen this way, love is not weakness or surrender to others' irrationality, but an active choice of the inner self. It does not aim to change the world immediately, but helps the actor not lose themselves when facing the limits of human existence that cannot be controlled.</p>
+
 			<p>Seen positively, if more people approach and choose the no-harm principle, benefits reach beyond individuals. A society where people self-limit their actions naturally becomes less conflict-ridden, more trustworthy, and more sustainable. Absolute consensus is unrealistic, but starting with oneself is the most feasible way to make ethics a real foundation for the value we create.</p>
 
 			<p>Harming others’ interests is not only blatant and direct. In daily life, a small act—like burning trash that smokes—can irritate neighbors. Adjusting behavior, reducing impact, or simply asking permission prevents conflict and shows respect. These harms are easy to spot because their effects appear almost immediately.</p>
