Revise content in "Health and Clarity of Mind" section to enhance clarity and depth, emphasizing the importance of health and mental clarity for sustainable value creation.

--- a/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
+++ b/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
@@ -14,13 +14,13 @@
 		</header>
 
 		<section class="content-section">
-			<p>For many years my life revolved around a familiar loop: eating, studying, and working. My job mostly meant sitting at a computer, typing for hours with almost no real movement. During that period my health quietly declined. I was often sleepy, tired, and felt I never had enough energy to do my work properly. Despite spending plenty of time working, the results did not match the effort.</p>
+			<p>A steel bar used continuously without proper tempering or rest quickly loses its durability and deforms. At first it can still bear weight, even loads beyond what was planned. But the more it is pushed past its limits, the clearer the risk of breaking becomes. Not because the steel is low quality, but because it is being used beyond its own load-bearing capacity.</p>
 
-			<p>Back then I kept telling myself I had no time for anything else. Exercise felt impossible to schedule. What I failed to see was that the frail condition itself was draining my time and capacity. The more I tried to push through, the more exhausted my body became, and the clearer my thinking faded.</p>
+			<p>The blacksmith knows this well. To forge a durable bar, he cares not only about how hard to strike, but also when to heat, when to cool, and when to stop. Strength comes from balancing stress and recovery. A properly tempered bar may not impress at first glance, but it can hold steady loads over a long time.</p>
 
-			<p>The change started with a very small decision. I added 30 to 45 minutes of resistance training each morning—not to hit any specific fitness goal, just to move in a meaningful way. Over time I found my body stronger, my mind more alert, and my focus noticeably improved. Work did not consume more time; on the contrary, it flowed more smoothly and efficiently.</p>
+			<p>People are no different. Health and clarity of mind do not directly create value, but they decide how much strain each person can endure under prolonged pace and pressure. When that foundation weakens, every effort—whether born of goodwill, discipline, or ambition—becomes fragile. Value, in that case, does not fail for lack of good intent, but for lack of the conditions to sustain it.</p>
 
-			<p>That is only my personal experience, and I do not treat it as a template for everyone. But from it I draw a clear conclusion: people can create value—and do it sustainably—only when they are healthy enough to carry what they pursue. Health, in this sense, is not a trophy or a self-perfection target; it is the base condition that lets energy and clarity actually show up.</p>
+			<p>This chapter looks at those foundational conditions: health as the body's load-bearing capacity, and clarity of mind as the ability to keep action from veering off course. Before talking about doing better, faster, or more, we need to know whether we have enough strength and alertness to keep acting rightly for a long enough stretch.</p>
 
 			<p>We can also look back at the discussion in Creating Value Through Actions. When I used the image of having to "run" every morning—whether you are a lion or a gazelle—the focus was not on speed or competition but on the continuity of action. To keep "running" day after day, the prerequisite is a body strong enough to bear that rhythm. Without a minimal physical foundation, any call for discipline or persistence is fragile.</p>
 
